Move calibrate file

--- a/calibrate.ipynb
+++ b/calibrate.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
-    "from calibrate import StereoCalibration, read_stereo_calibration, rectify_images"
+    "from src.calibrate import StereoCalibration, read_stereo_calibration, rectify_images"
    ]
   },
   {
