--- a/calibrate.ipynb
+++ b/calibrate.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
-    "from src.calibrate import StereoCalibration, read_stereo_calibration, rectify_images"
+    "from src.stereo_calibrate import StereoCalibration, read_stereo_calibration, rectify_images"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "right_path = 'data/right'\n",
     "chessboard_height = 6\n",
     "chessboard_width = 9\n",
-    "square_size = 0.076\n",
+    "square_size = 0.025\n",
     "file_extension = '.png'\n",
     "output_path = 'output'\n",
     "\n",
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_image_path = 'data/left/left_20250410_160812_1.png'\n",
-    "right_image_path = 'data/right/right_20250410_160812_1.png'\n",
+    "left_image_path = 'data/samples/seat_l_n.png'\n",
+    "right_image_path = 'data/samples/seat_r_n.png'\n",
     "left_image = cv2.imread(left_image_path, cv2.IMREAD_COLOR)\n",
     "right_image = cv2.imread(right_image_path, cv2.IMREAD_COLOR)\n",
     "left_rectified, right_rectified = rectify_images(\n",
@@ -79,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "StereoVision",
+   "display_name": "sv",
    "language": "python",
    "name": "python3"
   },
