--- a/calibrate.ipynb
+++ b/calibrate.ipynb
@@ -9,7 +9,11 @@
    "source": [
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
-    "from src.stereo_calibrate import StereoCalibration, read_stereo_calibration, rectify_images"
+    "from src.stereo_calibrate import (\n",
+    "    StereoCalibration,\n",
+    "    read_stereo_calibration,\n",
+    "    rectify_images,\n",
+    ")"
    ]
   },
   {
@@ -25,7 +29,7 @@
     "chessboard_width = 9\n",
     "square_size = 0.025\n",
     "file_extension = '.png'\n",
-    "output_path = 'output'\n",
+    "output_path = 'camera_configs'\n",
     "\n",
     "stereo_calibration = StereoCalibration(\n",
     "    left_path,\n",
@@ -47,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stereo_calibration_path = 'output/stereo_calibration.xml'\n",
+    "stereo_calibration_path = 'camera_configs/stereo_calibration.xml'\n",
     "stereo_map_left, stereo_map_right = read_stereo_calibration(stereo_calibration_path)"
    ]
   },
@@ -58,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_image_path = 'data/samples/seat_l_n.png'\n",
-    "right_image_path = 'data/samples/seat_r_n.png'\n",
+    "left_image_path = 'data/samples/seat_l.png'\n",
+    "right_image_path = 'data/samples/seat_r.png'\n",
     "left_image = cv2.imread(left_image_path, cv2.IMREAD_COLOR)\n",
     "right_image = cv2.imread(right_image_path, cv2.IMREAD_COLOR)\n",
     "left_rectified, right_rectified = rectify_images(\n",
@@ -74,6 +78,18 @@
     "plt.title('Right Rectified Image')\n",
     "plt.imshow(cv2.cvtColor(right_rectified, cv2.COLOR_BGR2RGB))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c66712e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the rectified images\n",
+    "cv2.imwrite('data/samples/seat_l_rect.png', left_rectified)\n",
+    "cv2.imwrite('data/samples/seat_r_rect.png', right_rectified)"
    ]
   }
  ],
