Camera intrinsics saving and loading

--- a/calibrate.ipynb
+++ b/calibrate.ipynb
@@ -30,6 +30,7 @@
     "square_size = 0.025\n",
     "file_extension = '.png'\n",
     "output_path = 'camera_configs'\n",
+    "distance_between_cameras = 0.21\n",
     "\n",
     "stereo_calibration = StereoCalibration(\n",
     "    left_path,\n",
@@ -37,11 +38,14 @@
     "    chessboard_height,\n",
     "    chessboard_width,\n",
     "    square_size,\n",
+    "    distance_between_cameras,\n",
     "    file_extension,\n",
+    "    output_path,\n",
     ")\n",
     "\n",
     "stereo_calibration.calibrate()\n",
-    "stereo_calibration.save_stereo_calibration()"
+    "stereo_calibration.save_stereo_calibration()\n",
+    "stereo_calibration.save_intrinsics(left=True)"
    ]
   },
   {
