--- a/stereo_inference.ipynb
+++ b/stereo_inference.ipynb
@@ -15,13 +15,13 @@
     "from src.stereo_calibrate import (\n",
     "    read_stereo_calibration,\n",
     "    rectify_images,\n",
-    "    read_camera_intrinsics\n",
+    "    read_camera_intrinsics,\n",
     ")\n",
     "from src.utils import (\n",
     "    images_to_tensors,\n",
     "    visualize_disparity,\n",
     "    postprocess_disparity,\n",
-    "    create_point_cloud\n",
+    "    create_point_cloud,\n",
     ")"
    ]
   },
@@ -33,9 +33,13 @@
    "outputs": [],
    "source": [
     "# Load stereo calibration parameters\n",
-    "stereo_map_left, stereo_map_right = read_stereo_calibration('camera_configs/stereo_calibration.xml')\n",
+    "stereo_map_left, stereo_map_right = read_stereo_calibration(\n",
+    "    'camera_configs/stereo_calibration.xml'\n",
+    ")\n",
     "# Read camera intrinsics\n",
-    "K, distance_between_cameras = read_camera_intrinsics('camera_configs/left_camera_intrinsics.xml')\n",
+    "K, distance_between_cameras = read_camera_intrinsics(\n",
+    "    'camera_configs/left_camera_intrinsics.xml'\n",
+    ")\n",
     "# Load stereo model\n",
     "stereo_model = StereoInferenceOnnx('models/fs_800_640.onnx')"
    ]
@@ -64,9 +68,7 @@
     "    left_image, right_image, stereo_map_left, stereo_map_right\n",
     ")\n",
     "# Preprocess images for the model\n",
-    "left_tensor, right_tensor, scale = images_to_tensors(\n",
-    "    left_rectified, right_rectified\n",
-    ")\n",
+    "left_tensor, right_tensor, scale = images_to_tensors(left_rectified, right_rectified)\n",
     "\n",
     "# show rectified images\n",
     "plt.subplot(1, 2, 1)\n",
@@ -119,11 +121,9 @@
    "outputs": [],
    "source": [
     "# Create point cloud\n",
-    "pcd = create_point_cloud(disparity_map_proc,\n",
-    "                         left_rectified,\n",
-    "                         K,\n",
-    "                         distance_between_cameras,\n",
-    "                         scale=scale)\n",
+    "pcd = create_point_cloud(\n",
+    "    disparity_map_proc, left_rectified, K, distance_between_cameras, scale=scale\n",
+    ")\n",
     "o3d.io.write_point_cloud('output/pcd/pointcloud.ply', pcd)"
    ]
   }
