Changes in data preprocessing

--- a/calibrate.ipynb
+++ b/calibrate.ipynb
@@ -66,8 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_image_path = 'data/samples/seat_l.png'\n",
-    "right_image_path = 'data/samples/seat_r.png'\n",
+    "left_image_path = 'data/samples/left.png'\n",
+    "right_image_path = 'data/samples/right.png'\n",
     "left_image = cv2.imread(left_image_path, cv2.IMREAD_COLOR)\n",
     "right_image = cv2.imread(right_image_path, cv2.IMREAD_COLOR)\n",
     "left_rectified, right_rectified = rectify_images(\n",
@@ -82,18 +82,6 @@
     "plt.title('Right Rectified Image')\n",
     "plt.imshow(cv2.cvtColor(right_rectified, cv2.COLOR_BGR2RGB))\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c66712e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save the rectified images\n",
-    "cv2.imwrite('data/samples/seat_l_rect.png', left_rectified)\n",
-    "cv2.imwrite('data/samples/seat_r_rect.png', right_rectified)"
    ]
   }
  ],
