--- a/stereo_inference.ipynb
+++ b/stereo_inference.ipynb
@@ -8,7 +8,9 @@
    "outputs": [],
    "source": [
     "import cv2\n",
+    "import numpy as np\n",
     "import open3d as o3d\n",
+    "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from src.stereo_inference import StereoInferenceOnnx\n",
@@ -47,28 +49,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fcc09be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load images\n",
-    "left_image = cv2.imread('data/samples/seat_l.png', cv2.IMREAD_COLOR)\n",
-    "right_image = cv2.imread('data/samples/seat_r.png', cv2.IMREAD_COLOR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a1749ce9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load images\n",
+    "left_image = cv2.imread('data/samples/left.png', cv2.IMREAD_COLOR)\n",
+    "right_image = cv2.imread('data/samples/right.png', cv2.IMREAD_COLOR)\n",
+    "\n",
     "# Rectify images\n",
     "left_rectified, right_rectified = rectify_images(\n",
     "    left_image, right_image, stereo_map_left, stereo_map_right\n",
     ")\n",
+    "# bgr to rgb and resize images to the model input size\n",
+    "left_rectified = cv2.cvtColor(left_rectified, cv2.COLOR_BGR2RGB)\n",
+    "right_rectified = cv2.cvtColor(right_rectified, cv2.COLOR_BGR2RGB)\n",
+    "left_rectified = cv2.resize(\n",
+    "    left_rectified,\n",
+    "    (stereo_model.input_width, stereo_model.input_height),\n",
+    "    interpolation=cv2.INTER_LINEAR,\n",
+    ")\n",
+    "right_rectified = cv2.resize(\n",
+    "    right_rectified,\n",
+    "    (stereo_model.input_width, stereo_model.input_height),\n",
+    "    interpolation=cv2.INTER_LINEAR,\n",
+    ")\n",
+    "scale = min(\n",
+    "    left_rectified.shape[0] / left_image.shape[0],\n",
+    "    right_rectified.shape[1] / right_image.shape[1],\n",
+    ")\n",
+    "\n",
     "# Preprocess images for the model\n",
-    "left_tensor, right_tensor, scale = images_to_tensors(left_rectified, right_rectified)\n",
+    "left_tensor, right_tensor = images_to_tensors(left_rectified, right_rectified)\n",
     "\n",
     "# show rectified images\n",
     "plt.subplot(1, 2, 1)\n",
@@ -107,6 +119,14 @@
     "# Postprocess disparity map\n",
     "disparity_map_proc = postprocess_disparity(disparity_map)\n",
     "\n",
+    "# save disparity map\n",
+    "output_path = Path('output/disp/')\n",
+    "output_path.mkdir(parents=True, exist_ok=True)\n",
+    "cv2.imwrite(\n",
+    "    str(output_path / 'disparity_map.png'),\n",
+    "    cv2.cvtColor(disparity_map_viz, cv2.COLOR_RGB2BGR),\n",
+    ")\n",
+    "\n",
     "# show disparity map with matplotlib\n",
     "plt.imshow(disparity_map_viz)\n",
     "plt.axis('off')\n",
@@ -124,7 +144,28 @@
     "pcd = create_point_cloud(\n",
     "    disparity_map_proc, left_rectified, K, distance_between_cameras, scale=scale\n",
     ")\n",
-    "o3d.io.write_point_cloud('output/pcd/pointcloud.ply', pcd)"
+    "\n",
+    "# Save point cloud to PLY file\n",
+    "output_path = Path('output/pcd/')\n",
+    "output_path.mkdir(parents=True, exist_ok=True)\n",
+    "o3d.io.write_point_cloud(str(output_path / 'pointcloud.ply'), pcd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d18abf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize point cloud using Open3D\n",
+    "vis = o3d.visualization.Visualizer()\n",
+    "vis.create_window()\n",
+    "vis.add_geometry(pcd)\n",
+    "vis.get_render_option().point_size = 1.0\n",
+    "vis.get_render_option().background_color = np.array([0.5, 0.5, 0.5])\n",
+    "vis.run()\n",
+    "vis.destroy_window()"
    ]
   }
  ],
