Readme update and single image rectification function

--- a/calibrate.ipynb
+++ b/calibrate.ipynb
@@ -12,7 +12,7 @@
     "from src.stereo_calibrate import (\n",
     "    StereoCalibration,\n",
     "    read_stereo_calibration,\n",
-    "    rectify_images,\n",
+    "    rectify_image,\n",
     ")"
    ]
   },
@@ -70,9 +70,8 @@
     "right_image_path = 'data/samples/right.png'\n",
     "left_image = cv2.imread(left_image_path, cv2.IMREAD_COLOR)\n",
     "right_image = cv2.imread(right_image_path, cv2.IMREAD_COLOR)\n",
-    "left_rectified, right_rectified = rectify_images(\n",
-    "    left_image, right_image, stereo_map_left, stereo_map_right\n",
-    ")\n",
+    "left_rectified = rectify_image(left_image, stereo_map_left)\n",
+    "right_rectified = rectify_image(right_image, stereo_map_right)\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
     "plt.subplot(121)\n",
