Mask added to stereo inference

--- a/stereo_inference.ipynb
+++ b/stereo_inference.ipynb
@@ -16,7 +16,7 @@
     "from src.stereo_inference import StereoInferenceOnnx\n",
     "from src.stereo_calibrate import (\n",
     "    read_stereo_calibration,\n",
-    "    rectify_images,\n",
+    "    rectify_image,\n",
     "    read_camera_intrinsics,\n",
     ")\n",
     "from src.utils import (\n",
@@ -56,11 +56,11 @@
     "# load images\n",
     "left_image = cv2.imread('data/samples/left.png', cv2.IMREAD_COLOR)\n",
     "right_image = cv2.imread('data/samples/right.png', cv2.IMREAD_COLOR)\n",
+    "mask_rectified = None\n",
     "\n",
     "# Rectify images\n",
-    "left_rectified, right_rectified = rectify_images(\n",
-    "    left_image, right_image, stereo_map_left, stereo_map_right\n",
-    ")\n",
+    "left_rectified = rectify_image(left_image, stereo_map_left)\n",
+    "right_rectified = rectify_image(right_image, stereo_map_right)\n",
     "# bgr to rgb and resize images to the model input size\n",
     "left_rectified = cv2.cvtColor(left_rectified, cv2.COLOR_BGR2RGB)\n",
     "right_rectified = cv2.cvtColor(right_rectified, cv2.COLOR_BGR2RGB)\n",
@@ -97,6 +97,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17c814d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note optional step is mask is provided\n",
+    "left_mask = cv2.imread('data/samples/left_mask.png', cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "kernel_size = 5\n",
+    "iterations = 3\n",
+    "kernel = np.ones((kernel_size, kernel_size), np.uint8)\n",
+    "left_mask = cv2.erode(left_mask, kernel, iterations=iterations)\n",
+    "\n",
+    "mask_rectified = rectify_image(left_mask, stereo_map_left)\n",
+    "mask_rectified = cv2.resize(\n",
+    "    mask_rectified,\n",
+    "    (stereo_model.input_width, stereo_model.input_height),\n",
+    "    interpolation=cv2.INTER_LINEAR,\n",
+    ")\n",
+    "\n",
+    "# show mask\n",
+    "plt.imshow(mask_rectified, cmap='gray')\n",
+    "plt.title('Left Mask Image')\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7b44bdee",
    "metadata": {},
    "outputs": [],
@@ -115,9 +144,9 @@
     "# squeeze form 4D to 2D\n",
     "disparity_map = disparity_map.squeeze(0).squeeze(0)\n",
     "# Visualize disparity map\n",
-    "disparity_map_viz = visualize_disparity(disparity_map)\n",
+    "disparity_map_viz = visualize_disparity(disparity_map, mask=mask_rectified)\n",
     "# Postprocess disparity map\n",
-    "disparity_map_proc = postprocess_disparity(disparity_map)\n",
+    "disparity_map_proc = postprocess_disparity(disparity_map, mask=mask_rectified)\n",
     "\n",
     "# save disparity map\n",
     "output_path = Path('output/disp/')\n",
