Moving notebooks to separate directory

--- a/notebooks/calibrate.ipynb
+++ b/notebooks/calibrate.ipynb
@@ -7,8 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import cv2\n",
+    "import rootutils\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
+    "rootutils.setup_root(os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True)\n",
+    "\n",
     "from src.stereo_calibrate import (\n",
     "    StereoCalibration,\n",
     "    read_stereo_calibration,\n",
@@ -23,13 +28,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_path = 'data/left'\n",
-    "right_path = 'data/right'\n",
+    "left_path = '../data/left'\n",
+    "right_path = '../data/right'\n",
     "chessboard_height = 6\n",
     "chessboard_width = 9\n",
     "square_size = 0.025\n",
     "file_extension = '.png'\n",
-    "output_path = 'camera_configs'\n",
+    "output_path = '../camera_configs'\n",
     "distance_between_cameras = 0.21\n",
     "\n",
     "stereo_calibration = StereoCalibration(\n",
@@ -55,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stereo_calibration_path = 'camera_configs/stereo_calibration.xml'\n",
+    "stereo_calibration_path = '../camera_configs/stereo_calibration.xml'\n",
     "stereo_map_left, stereo_map_right = read_stereo_calibration(stereo_calibration_path)"
    ]
   },
@@ -66,8 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_image_path = 'data/samples/left.png'\n",
-    "right_image_path = 'data/samples/right.png'\n",
+    "left_image_path = '../data/samples/left.png'\n",
+    "right_image_path = '../data/samples/right.png'\n",
     "left_image = cv2.imread(left_image_path, cv2.IMREAD_COLOR)\n",
     "right_image = cv2.imread(right_image_path, cv2.IMREAD_COLOR)\n",
     "left_rectified = rectify_image(left_image, stereo_map_left)\n",
