--- a/notebooks/stereo_inference.ipynb
+++ b/notebooks/stereo_inference.ipynb
@@ -7,11 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import cv2\n",
     "import numpy as np\n",
     "import open3d as o3d\n",
+    "import rootutils\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "rootutils.setup_root(os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True)\n",
     "\n",
     "from src.stereo_inference import StereoInferenceOnnx\n",
     "from src.stereo_calibrate import (\n",
@@ -36,14 +40,14 @@
    "source": [
     "# Load stereo calibration parameters\n",
     "stereo_map_left, stereo_map_right = read_stereo_calibration(\n",
-    "    'camera_configs/stereo_calibration.xml'\n",
+    "    '../camera_configs/stereo_calibration.xml'\n",
     ")\n",
     "# Read camera intrinsics\n",
     "K, distance_between_cameras = read_camera_intrinsics(\n",
-    "    'camera_configs/left_camera_intrinsics.xml'\n",
+    "    '../camera_configs/left_camera_intrinsics.xml'\n",
     ")\n",
     "# Load stereo model\n",
-    "stereo_model = StereoInferenceOnnx('models/fs_800_640.onnx')"
+    "stereo_model = StereoInferenceOnnx('../models/fs_800_640.onnx')"
    ]
   },
   {
@@ -54,8 +58,8 @@
    "outputs": [],
    "source": [
     "# load images\n",
-    "left_image = cv2.imread('data/samples/left.png', cv2.IMREAD_COLOR)\n",
-    "right_image = cv2.imread('data/samples/right.png', cv2.IMREAD_COLOR)\n",
+    "left_image = cv2.imread('../data/samples/left.png', cv2.IMREAD_COLOR)\n",
+    "right_image = cv2.imread('../data/samples/right.png', cv2.IMREAD_COLOR)\n",
     "mask_rectified = None\n",
     "\n",
     "# Rectify images\n",
@@ -102,7 +106,7 @@
    "outputs": [],
    "source": [
     "# Note optional step is mask is provided\n",
-    "left_mask = cv2.imread('data/samples/left_mask.png', cv2.IMREAD_GRAYSCALE)\n",
+    "left_mask = cv2.imread('../data/samples/left_mask.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "kernel_size = 5\n",
     "iterations = 3\n",
@@ -149,7 +153,7 @@
     "disparity_map_proc = postprocess_disparity(disparity_map, mask=mask_rectified)\n",
     "\n",
     "# save disparity map\n",
-    "output_path = Path('output/disp/')\n",
+    "output_path = Path('../output/disp/')\n",
     "output_path.mkdir(parents=True, exist_ok=True)\n",
     "cv2.imwrite(\n",
     "    str(output_path / 'disparity_map.png'),\n",
@@ -175,7 +179,7 @@
     ")\n",
     "\n",
     "# Save point cloud to PLY file\n",
-    "output_path = Path('output/pcd/')\n",
+    "output_path = Path('../output/pcd/')\n",
     "output_path.mkdir(parents=True, exist_ok=True)\n",
     "o3d.io.write_point_cloud(str(output_path / 'pointcloud.ply'), pcd)"
    ]
