--- a/notebooks/stereo_inference.ipynb
+++ b/notebooks/stereo_inference.ipynb
@@ -15,7 +15,9 @@
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "rootutils.setup_root(os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True)\n",
+    "rootutils.setup_root(\n",
+    "    os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True\n",
+    ")\n",
     "\n",
     "from src.stereo_inference import StereoInferenceOnnx\n",
     "from src.stereo_calibrate import (\n",
