--- a/notebooks/calibrate.ipynb
+++ b/notebooks/calibrate.ipynb
@@ -12,7 +12,9 @@
     "import rootutils\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "rootutils.setup_root(os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True)\n",
+    "rootutils.setup_root(\n",
+    "    os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True\n",
+    ")\n",
     "\n",
     "from src.stereo_calibrate import (\n",
     "    StereoCalibration,\n",
