--- a/notebooks/2.0_Stereo_inference.ipynb
+++ b/notebooks/2.0_Stereo_inference.ipynb
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# squeeze form 4D to 2D\n",
-    "disparity_map = disparity_map.squeeze(0).squeeze(0)\n",
+    "disparity_map = disparity_map.squeeze()\n",
     "# Visualize disparity map\n",
     "disparity_map_viz = visualize_disparity(disparity_map, mask=mask_rectified)\n",
     "# Postprocess disparity map\n",
