--- a/notebooks/3.0_Stereo_inference_masked.ipynb
+++ b/notebooks/3.0_Stereo_inference_masked.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# load images\n",
-    "image_name = '20250423_164007_15'\n",
+    "image_name = '20250429_105703_0'\n",
     "left_image = cv2.imread('../data/left/left_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
     "right_image = cv2.imread('../data/right/right_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
     "\n",
@@ -231,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sv",
+   "display_name": "StereoSense",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
