Moving utility functions

--- a/notebooks/4.0_Pcd_align.ipynb
+++ b/notebooks/4.0_Pcd_align.ipynb
@@ -19,9 +19,8 @@
     "    os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True\n",
     ")\n",
     "\n",
-    "from src.stereo_calibrate import (\n",
-    "    read_camera_intrinsics,\n",
-    ")"
+    "from src.stereo_calibrate import read_camera_intrinsics\n",
+    "from src.utils import remove_small_clusters"
    ]
   },
   {
@@ -57,72 +56,6 @@
    "metadata": {},
    "source": [
     "#### Filter pointclouds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65447453",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_outliers(pcd: o3d.geometry.PointCloud,\n",
-    "                    method: str = 'statistical',\n",
-    "                    nb_neighbors: int = 5,\n",
-    "                    std_ratio: float = 3.0,\n",
-    "                    radius: float = 0.05,\n",
-    "                    min_neighbors: int = 5) -> o3d.geometry.PointCloud:\n",
-    "    \"\"\"\n",
-    "    Removes outlier points from a point cloud using statistical or radius method.\n",
-    "    \n",
-    "    Args:\n",
-    "        pcd: Input point cloud.\n",
-    "        method: 'statistical' or 'radius'.\n",
-    "        nb_neighbors: For statistical — number of neighbors to consider.\n",
-    "        std_ratio: For statistical — threshold based on standard deviation.\n",
-    "        radius: For radius — radius within which neighbors must exist.\n",
-    "        min_neighbors: For radius — minimum number of neighbors within the radius.\n",
-    "    \n",
-    "    Returns:\n",
-    "        Filtered point cloud with outliers removed.\n",
-    "    \"\"\"\n",
-    "    if method == 'statistical':\n",
-    "        cl, ind = pcd.remove_statistical_outlier(nb_neighbors=nb_neighbors,\n",
-    "                                                 std_ratio=std_ratio)\n",
-    "    elif method == 'radius':\n",
-    "        cl, ind = pcd.remove_radius_outlier(nb_points=min_neighbors,\n",
-    "                                            radius=radius)\n",
-    "    else:\n",
-    "        raise ValueError(\"Invalid method: choose 'statistical' or 'radius'\")\n",
-    "    \n",
-    "    return cl\n",
-    "\n",
-    "def remove_small_clusters(pcd: o3d.geometry.PointCloud,\n",
-    "                          voxel_size: float = 0.01,\n",
-    "                          min_cluster_size: int = 100) -> o3d.geometry.PointCloud:\n",
-    "    \"\"\"\n",
-    "    Removes small connected components (e.g. stray lines) from a dense point cloud.\n",
-    "\n",
-    "    Args:\n",
-    "        pcd: Input point cloud.\n",
-    "        voxel_size: Size used to define connectivity.\n",
-    "        min_cluster_size: Minimum number of points a cluster must have to be kept.\n",
-    "\n",
-    "    Returns:\n",
-    "        Filtered point cloud with small components removed.\n",
-    "    \"\"\"\n",
-    "    labels = np.array(pcd.cluster_dbscan(eps=voxel_size, min_points=5, print_progress=False))\n",
-    "    max_label = labels.max()\n",
-    "    print(f\"Found {max_label + 1} clusters\")\n",
-    "\n",
-    "    # Filter clusters by size\n",
-    "    kept_indices = []\n",
-    "    for i in range(max_label + 1):\n",
-    "        indices = np.where(labels == i)[0]\n",
-    "        if len(indices) >= min_cluster_size:\n",
-    "            kept_indices.extend(indices)\n",
-    "\n",
-    "    return pcd.select_by_index(kept_indices)"
    ]
   },
   {
@@ -334,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sv",
+   "display_name": "StereoSense",
    "language": "python",
    "name": "python3"
   },
@@ -348,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
