--- a/notebooks/4.0_Pcd_align.ipynb
+++ b/notebooks/4.0_Pcd_align.ipynb
@@ -19,7 +19,6 @@
     "    os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True\n",
     ")\n",
     "\n",
-    "from src.stereo_calibrate import read_camera_intrinsics\n",
     "from src.utils import remove_small_clusters"
    ]
   },
@@ -42,12 +41,7 @@
     "target_left_img = cv2.imread('../data/left/left_20250429_105703_0.png')\n",
     "\n",
     "source_pcd = o3d.io.read_point_cloud('../output/pcd/20250429_110523_21.ply')\n",
-    "source_left_img = cv2.imread('../data/left/left_20250429_110523_21.png')\n",
-    "\n",
-    "# Read camera intrinsics\n",
-    "K, distance_between_cameras = read_camera_intrinsics(\n",
-    "    '../camera_configs/left_camera_intrinsics.xml'\n",
-    ")"
+    "source_left_img = cv2.imread('../data/left/left_20250429_110523_21.png')"
    ]
   },
   {
@@ -267,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "StereoSense",
+   "display_name": "sv",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
