Disparity map saving

--- a/notebooks/3.0_Stereo_inference_masked.ipynb
+++ b/notebooks/3.0_Stereo_inference_masked.ipynb
@@ -213,6 +213,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b10dad73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save disparity map as numpy file\n",
+    "np.save(f'../output/disp/disparity_map_{image_name}.npy', disparity_map_proc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2985b01b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save disparity map\n",
+    "cv2.imwrite(f'../output/disp/disparity_map_{image_name}.png', cv2.cvtColor(disparity_map_viz, cv2.COLOR_RGB2BGR))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8cca1b68",
    "metadata": {},
    "outputs": [],
